UI listbox added

--- a/HBSJ64_HFT_2021221.WPFClient/MainWindow.xaml
+++ b/HBSJ64_HFT_2021221.WPFClient/MainWindow.xaml
@@ -6,7 +6,44 @@
         xmlns:local="clr-namespace:HBSJ64_HFT_2021221.WPFClient"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <local:MainWindowViewModel/>
+    </Window.DataContext>
     <Grid>
-
+        <TabControl>
+            <TabItem Header="Films">
+                <ListBox ItemsSource="{Binding Films}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Border BorderBrush="Black" BorderThickness="1">
+                                <Label Content="{Binding Title}" />
+                            </Border>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </TabItem>
+            <TabItem Header="Actors">
+                <ListBox ItemsSource="{Binding Actors}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Border BorderBrush="Black" BorderThickness="1">
+                                <Label Content="{Binding Name}" />
+                            </Border>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </TabItem>
+            <TabItem Header="Directors">
+                <ListBox ItemsSource="{Binding Directors}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Border BorderBrush="Black" BorderThickness="1">
+                                <Label Content="{Binding Name}" />
+                            </Border>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
